Update contact form action URL

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
     <span class="section-label">Contact</span>
     <h2 class="section-title">Travaillons <em>ensemble</em></h2>
     <p class="contact-intro">Vous avez un projet ? Besoin d'un coup de pouce pour votre présence en ligne ? N'hésitez pas à me contacter.</p>
-    <form class="contact-form" onsubmit="handleSubmit(event)">
+    <form class="contact-form" action="https://formspree.io/f/maqdljne" method="POST">
       <div class="form-group">
         <label>Votre nom</label>
         <input type="text" placeholder="Votre nom complet">
