--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
     <form class="contact-form" action="https://formspree.io/f/maqdljne" method="POST">
       <div class="form-group">
         <label>Votre nom</label>
-<input type="text" name="MAROUA" placeholder="Maroua Touimi Benjelloun" required>
+<input type="text" name="name" placeholder="Maroua Touimi Benjelloun" required>
       </div>
       <div class="form-group">
         <label>Votre email</label>
